# lakedoc

./: README.md  main.py  pyproject.toml
lakedoc/: __init__.py
lakedoc/assets/: arch.drawio
lakedoc/context/: __init__.py  base.py  lake.py  outer.py
lakedoc/converters/: __init__.py  base.py  md_converter.py
lakedoc/examples/: __init__.py  example.html
lakedoc/utils/: __init__.py  errors.py  file.py  function.py  string.py
